--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,9 @@ h3 {
   font-family: "Comfortaa", cursive;
   background: rgb(128, 85, 140);
   color: rgb(247, 246, 242);
-  margin-right: 75%;
+  text-align: center;
+  margin-right: 5%;
+  margin-left: 5%;
   border: 1px solid rgb(128, 85, 140);
   border-radius: 5px;
 }
@@ -26,7 +28,8 @@ h3 {
 h4 {
   font-family: "Comfortaa", cursive;
   position: relative;
-  left: 36%;
+  left: 50%;
+  right: 5%;
   bottom: 15%;
 }
 
@@ -38,7 +41,9 @@ h4 {
   font-family: "Poppins", sans-serif;
   font-size: 18px;
   color: black;
-  margin-right: 75%;
+  margin-top: 3%;
+  margin-right: 55%;
+  margin-left: 5%;
   border: 2px solid rgb(128, 85, 140);
   border-radius: 5px;
   padding-left: 5px;
@@ -83,7 +88,7 @@ h4 {
   font-size: 120px;
   color: rgb(228, 209, 146);
   position: relative;
-  left: 7%;
+  left: 10%;
   bottom: 10%;
 }
 
@@ -104,8 +109,8 @@ h4 {
   font-weight: bold;
   font-size: 20px;
   position: relative;
-  bottom: 29%;
-  left: 37%;
+  bottom: 25%;
+  left: 52%;
 }
 
 .low-temp {
@@ -114,10 +119,10 @@ h4 {
 
 .specific {
   font-family: "Poppins", sans-serif;
-  font-size: 16px; 
+  font-size: 16px;
   position: relative;
-  bottom: 29%;
-  left: 37%;
+  bottom: 25%;
+  left: 52%;
 }
 
 .row {
